welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value Direction
	if (posfinale() && (getDirection() == Direction.EST) ) {
                                              ^ZigZag:18: error: not found: value Direction
	 else if ((posfinale()) && (getDirection() == Direction.OUEST) ) {
                                                      ^