welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
def posfinale(): Boolean = {
	var h = getMondeHauteur()-1;
	var l = getMondeLargeur()-1;
	if (getX() == l && getY() == h) {
		return true;
	} else {
		return false;
	}
	 
}
def serpent() {
	if (posfinale() && (getDirection() == Direction.EST) ) {
		gauche();
		avance();
		gauche();
	}
	 else if ((posfinale()) && (getDirection() == Direction.OUEST) ) {
		droite();
		avance();
		droite();
	} else {
		avance();
	}
	
}
def snake() {
		while (!(posfinale())) {
		serpent();
	}
	droite();
}
snake();
}
